bindings/c/include/DocumentFilters.h

	typedef wchar_t IGR_UCS2;
	typedef long IGR_LONG;
	typedef unsigned long IGR_ULONG;
typedef uint16_t IGR_UCS2;
typedef int32_t IGR_LONG;
typedef uint32_t IGR_ULONG;
	typedef short int IGR_SHORT;
	typedef int64_t IGR_LONGLONG;
	typedef uint64_t IGR_ULONGLONG;
	typedef void* IGR_HANDLE;
	typedef float IGR_FLOAT;
	typedef IGR_LONG HPAGE;
	typedef HPAGE IGR_HPAGE;
	typedef IGR_LONG IGR_HDOC;
	typedef IGR_LONG IGR_RETURN_CODE;
#define IGR_COMPARE_DOCUMENTS_DIFFERENCE_TYPE              IGR_ULONG
#define IGR_COMPARE_DOCUMENTS_FLAGS_TYPE                   IGR_ULONG
#define IGR_COMPARE_DOCUMENTS_COMPARE_TYPE                 IGR_ULONG
#define IGR_COMPARE_DOCUMENTS_DIFFERENCE_SOURCE_TYPE       IGR_ULONG
#define IGR_OPEN_CALLBACK_ACTION                           IGR_LONG
#define IGR_PAGE_ELEMENT_TYPE                              IGR_ULONG
#define IGR_PAGE_ELEMENT_FLAG_TYPE                         IGR_ULONG
	typedef struct tagError_Control_Block
	{
		char Msg[238];
		IGR_SHORT MsgId;
	} Error_Control_Block;
	typedef struct tagInstance_Status_Block
	{
		char DLL_Version[16];
		IGR_SHORT RReserved;
		IGR_SHORT License_Type;
		char Licensee_ID1[40];
		char Licensee_ID2[40];
	} Instance_Status_Block, *LPInstance_Status_Block;
	struct IGR_Stream
	{
		ULONG(CALLBACK* Open)(struct IGR_Stream* stream);
		ULONG(CALLBACK* Read)(struct IGR_Stream* stream, void* buffer, ULONG bufferSize);
		IGR_LONGLONG(CALLBACK* Seek)(struct IGR_Stream* stream, IGR_LONGLONG offset, ULONG whence);
		void(CALLBACK* Close)(struct IGR_Stream* stream);
	};
	struct IGR_Rect
	{
		IGR_ULONG left;
		IGR_ULONG top;
		IGR_ULONG right;
		IGR_ULONG bottom;
	};
	struct IGR_FRect
	{
		IGR_FLOAT left;
		IGR_FLOAT top;
		IGR_FLOAT right;
		IGR_FLOAT bottom;
	};
	struct IGR_FPoint
	{
		IGR_FLOAT x;
		IGR_FLOAT y;
	};
	struct IGR_QuadPoint
	{
		union
		{
			struct
			{
				struct IGR_FPoint upperLeft;
				struct IGR_FPoint upperRight;
				struct IGR_FPoint lowerRight;
				struct IGR_FPoint lowerLeft;
			};
			struct IGR_FPoint points[4];
		};
	};
	struct IGR_Open_DIB_Info
	{
		IGR_ULONG struct_size;
		IGR_ULONG flags;
		IGR_ULONG width;
		IGR_ULONG height;
		IGR_ULONG stride;
		IGR_OPEN_BITMAP_PIXEL_TYPE pixel_format;
		const void* pixel_data;
		IGR_ULONG pixel_data_size;
		const IGR_LONG* palette;
		IGR_ULONG palette_count;
		IGR_ULONG dpi_x;
		IGR_ULONG dpi_y;
		IGR_OPEN_BITMAP_ORIENTATION_TYPE orientation;
	};
	struct IGR_Subfile_Info
	{
		IGR_ULONG struct_size;
		IGR_SUBFILE_INFO_FLAG_TYPE flags;
		IGR_UCS2* id;
		IGR_ULONG id_size;
		IGR_UCS2* name;
		IGR_ULONG name_size;
		IGR_UCS2* comment;
		IGR_ULONG comment_size;
		IGR_ULONGLONG size;
		IGR_ULONGLONG date;
	};
	struct IGR_Open_Callback_Action_OCR_Image_Style_Info
	{
		IGR_ULONG struct_size;
		IGR_FLOAT font_size;
		IGR_UCS2 font_family[256];
		IGR_ULONG text_style;
	};
	struct IGR_Open_Callback_Action_OCR_Image
	{
		IGR_ULONG struct_size;
		void* reserved;
		const struct IGR_Open_DIB_Info* source_image_pixels;
		IGR_ULONG source_page_index;
		struct IGR_Rect source_rect;
		IGR_UCS2 source_name[128];
		IGR_RETURN_CODE(IGR_EXPORT* GetMetadata)
		(const struct IGR_Open_Callback_Action_OCR_Image* action, const IGR_UCS2* name, IGR_UCS2* dest, size_t dest_size);
		IGR_RETURN_CODE(IGR_EXPORT* SaveImage)
		(const struct IGR_Open_Callback_Action_OCR_Image* action, const IGR_UCS2* filename, const IGR_UCS2* mimetype);
		IGR_RETURN_CODE(IGR_EXPORT* StartBlock)
		(const struct IGR_Open_Callback_Action_OCR_Image* action, IGR_ULONG block_type, const struct IGR_QuadPoint* rect);
		IGR_RETURN_CODE(IGR_EXPORT* EndBlock)(const struct IGR_Open_Callback_Action_OCR_Image* action, IGR_ULONG block_type);
		IGR_RETURN_CODE(IGR_EXPORT* AddText)
		(const struct IGR_Open_Callback_Action_OCR_Image* action, const IGR_UCS2* text, const struct IGR_QuadPoint* rect, IGR_ULONG flags,
		 const struct IGR_Open_Callback_Action_OCR_Image_Style_Info* font_style);
		IGR_RETURN_CODE(IGR_EXPORT* AddTextWithOffsets)
		(const struct IGR_Open_Callback_Action_OCR_Image* action, const IGR_UCS2* text, const IGR_FLOAT* offsets,
		 const struct IGR_QuadPoint* rect, IGR_ULONG flags, const struct IGR_Open_Callback_Action_OCR_Image_Style_Info* font_style);
		IGR_RETURN_CODE(IGR_EXPORT* Reorient)(const struct IGR_Open_Callback_Action_OCR_Image* action, IGR_FLOAT degrees);
	};
	struct IGR_Page_Element
	{
		IGR_ULONG struct_size;
		const void* reserved;
		IGR_PAGE_ELEMENT_TYPE type;
		IGR_ULONG depth;
		IGR_PAGE_ELEMENT_FLAG_TYPE flags;
		struct IGR_FRect pos;
		IGR_ULONG rotation;
	};
	typedef IGR_LONG(IGR_EXPORT* IGR_PAGE_ELEMENT_STYLES_CALLBACK)(const IGR_UCS2* name, const IGR_UCS2* value, void* context);
	typedef IGR_LONG(IGR_EXPORT* IGR_PAGE_ELEMENT_CALLBACK)(IGR_HPAGE page, const struct IGR_Page_Element* item, void* context);
	struct IGR_Compare_Documents_Callback_Context
	{
		IGR_ULONG struct_size;
		IGR_ULONG doc_index;
		IGR_LONG doc_handle;
		IGR_ULONG page_index;
		IGR_HPAGE page_handle;
	};
	struct IGR_Compare_Documents_Difference_Item
	{
		IGR_ULONG struct_size;
		IGR_ULONG page_index;
		struct IGR_FRect bounds;
		const IGR_UCS2* text;
	};
	struct IGR_Compare_Documents_Difference
	{
		IGR_ULONG struct_size;
		IGR_COMPARE_DOCUMENTS_DIFFERENCE_TYPE type;
		IGR_COMPARE_DOCUMENTS_DIFFERENCE_SOURCE_TYPE doc_source;
		IGR_ULONG original_page_index;
		IGR_ULONG revised_page_index;
		IGR_ULONG item_count;
		const struct IGR_Compare_Documents_Difference_Item* items;
	};
	struct IGR_Text_Compare_Settings
	{
		IGR_ULONG struct_size;
		IGR_COMPARE_DOCUMENTS_COMPARE_TYPE compare_type;
		IGR_COMPARE_DOCUMENTS_FLAGS_TYPE flags;
		void* user_context;
		IGR_ULONG comparison_window;
		IGR_ULONG comparison_overlap;
		void* reserved1;
		void* reserved2;
		void* reserved3;
		void* reserved4;
		IGR_RETURN_CODE(CALLBACK* OpenPage)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, IGR_ULONG page_index, IGR_HPAGE* page_handle);
		IGR_RETURN_CODE(CALLBACK* ClosePage)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, IGR_HPAGE page_handle);
		IGR_RETURN_CODE(CALLBACK* GetPageMargins)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, struct IGR_FRect* margins);
		IGR_RETURN_CODE(CALLBACK* GetPageArea)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, struct IGR_FRect* page_area);
		IGR_RETURN_CODE(CALLBACK* GetNextPageIndex)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, IGR_ULONG* page_index);
		IGR_RETURN_CODE(CALLBACK* HandleError)
		(void* context, const struct IGR_Compare_Documents_Callback_Context* info, const Error_Control_Block* ecb);
	};
	struct IGR_Text_Compare_Document_Source
	{
		IGR_ULONG struct_size;
		IGR_LONG doc_handle;
		IGR_ULONG doc_first_page;
		IGR_ULONG doc_page_count;
		struct IGR_FRect doc_margins;
	};
	void IGR_EXPORT Init_Instance(IGR_LONG reserved, const char* path, Instance_Status_Block* init, IGR_SHORT* handle,
	                              Error_Control_Block* error);
	void IGR_EXPORT Close_Instance(Error_Control_Block* error);
	void IGR_EXPORT Switch_Instance(IGR_SHORT handle, Error_Control_Block* error);
	void IGR_EXPORT Widechar_to_UTF8(const IGR_UCS2* source, char* buffer, IGR_LONG bufferSize);
	void IGR_EXPORT Widechar_to_UTF8_Ex(const IGR_UCS2* source, IGR_LONG sourceLen, char* buffer, IGR_LONG bufferSize);
	void IGR_EXPORT UTF8_to_Widechar(const char* source, IGR_UCS2* buffer, IGR_LONG bufferSize);
	void IGR_EXPORT UTF8_to_Widechar_Ex(const char* source, IGR_LONG sourceLen, IGR_UCS2* buffer, IGR_LONG bufferSize);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_File_Type(const IGR_UCS2* filename, IGR_FILE_SUPPORTS_TYPE* capabilities, IGR_LONG* filetype,
	                                             Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Get_Stream_Type(struct IGR_Stream* stream, IGR_FILE_SUPPORTS_TYPE* capabilities, IGR_LONG* filetype,
	                                               Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Open_File(const IGR_UCS2* filename, IGR_OPEN_FLAGS_TYPE flags, IGR_FILE_SUPPORTS_TYPE* capabilities,
	                                         IGR_LONG* filetype, IGR_LONG* handle, Error_Control_Block* error);
	IGR_RETURN_CODE IGR_EXPORT IGR_Open_Stream(struct IGR_Stream* stream, IGR_OPEN_FLAGS_TYPE flags, IGR_FILE_SUPPORTS_TYPE* capabilities,
	                                           IGR_LONG* filetype, IGR_LONG* handle, Error_Control_Block* error);
	typedef IGR_LONG(IGR_EXPORT* IGR_OPEN_CALLBACK)(IGR_OPEN_CALLBACK_ACTION action, void* payload, void* context);