bindings/python/src/DocumentFilters/DocumentFiltersAPI.py


class IGR_Open_Callback_Action_OCR_Image(ctypes.Structure):
    _fields_ = [
        ('struct_size', IGR_ULONG),  # Indicate the size of this structure; must be populated.
        ('reserved', ctypes.c_void_p),  # Reserved for internal use.
        ('source_image_pixels', ctypes.POINTER(IGR_Open_DIB_Info)),  # The image data to process.
        ('source_page_index', IGR_ULONG),  # The page-index of the page containing the image.
        ('source_rect', IGR_Rect),  # The rectangle of the image in the source document.
        ('source_name', IGR_UCS2 * 128),  # The name of the source image, if known.

        # Function pointers for callbacks
        ('GetMetadata', ctypes.CFUNCTYPE(
            IGR_RETURN_CODE,
            ctypes.POINTER(None),  # Pointer to this structure
            ctypes.POINTER(None),  # Name
            ctypes.POINTER(None),  # Destination buffer
            ctypes.c_size_t)),  # Destination buffer size

        ('SaveImage', ctypes.CFUNCTYPE(
            IGR_RETURN_CODE,
            ctypes.POINTER(None),  # Pointer to this structure
            ctypes.POINTER(None),  # Filename
            ctypes.POINTER(None))),  # Mime type

        ('StartBlock', ctypes.CFUNCTYPE(
            IGR_RETURN_CODE,
            ctypes.POINTER(None),  # Pointer to this structure
            IGR_ULONG,  # Block type
            ctypes.POINTER(IGR_QuadPoint))),  # Rectangle

        ('EndBlock', ctypes.CFUNCTYPE(
            IGR_RETURN_CODE,
            ctypes.POINTER(None),  # Pointer to this structure
            IGR_ULONG)),  # Block type

        ('AddText', ctypes.CFUNCTYPE(
            IGR_RETURN_CODE,
            ctypes.POINTER(None),  # Pointer to this structure
            ctypes.POINTER(None),  # Text
            ctypes.POINTER(IGR_QuadPoint),  # Rectangle
            IGR_ULONG,  # Flags
            ctypes.POINTER(IGR_Open_Callback_Action_OCR_Image_Style_Info))),  # Font style

        ('AddTextWithOffsets', ctypes.CFUNCTYPE(
            IGR_RETURN_CODE,
            ctypes.POINTER(None),  # Pointer to this structure
            ctypes.POINTER(None),  # Text
            ctypes.POINTER(None),  # Offsets
            ctypes.POINTER(IGR_QuadPoint),  # Rectangle
            IGR_ULONG,  # Flags
            ctypes.POINTER(IGR_Open_Callback_Action_OCR_Image_Style_Info))),  # Font style

        ('Reorient', ctypes.CFUNCTYPE(
            IGR_RETURN_CODE,
            ctypes.POINTER(None),  # Pointer to this structure
            IGR_FLOAT))  # Degrees
    ]
    

IGR_OPEN_CALLBACK = ctypes.CFUNCTYPE(UNCHECKED(IGR_LONG), IGR_OPEN_CALLBACK_ACTION, ctypes.POINTER(None), ctypes.POINTER(None))

IGR_COMPARE_DOCUMENTS_DIFFERENCE_TYPE = IGR_ULONG
IGR_COMPARE_DOCUMENTS_DIFFERENCE_SOURCE_TYPE = IGR_ULONG
IGR_COMPARE_DOCUMENTS_COMPARE_TYPE = IGR_ULONG
IGR_COMPARE_DOCUMENTS_FLAGS_TYPE = IGR_ULONG

class IGR_Compare_Documents_Callback_Context(ctypes.Structure):
    _fields_ = [
        ("struct_size", IGR_ULONG),
        ("doc_index", IGR_ULONG),
        ("doc_handle", IGR_HDOC),
        ("page_index", IGR_ULONG),
        ("page_handle", IGR_HDOC),
    ]

class IGR_Compare_Documents_Difference_Item(ctypes.Structure):
    _fields_ = [
        ("struct_size", IGR_ULONG),
        ("page_index", IGR_ULONG),
        ("bounds", IGR_FRect),
        ("text", ctypes.POINTER(IGR_UCS2)),
    ]

class IGR_Compare_Documents_Difference(ctypes.Structure):
    _fields_ = [
        ("struct_size", IGR_ULONG),
        ("type", IGR_COMPARE_DOCUMENTS_DIFFERENCE_TYPE),
        ("doc_source", IGR_COMPARE_DOCUMENTS_DIFFERENCE_SOURCE_TYPE),
        ("original_page_index", IGR_ULONG),
        ("revised_page_index", IGR_ULONG),
        ("item_count", IGR_ULONG),
        ("items", ctypes.POINTER(IGR_Compare_Documents_Difference_Item)),
    ]

class IGR_Text_Compare_Settings(ctypes.Structure):
    _fields_ = [
        ("struct_size", IGR_ULONG),
        ("compare_type", IGR_COMPARE_DOCUMENTS_COMPARE_TYPE),
        ("flags", IGR_COMPARE_DOCUMENTS_FLAGS_TYPE),
        ("user_context", ctypes.c_void_p),
        ("comparison_window", IGR_ULONG),
        ("comparison_overlap", IGR_ULONG),
        ("reserved1", ctypes.c_void_p),
        ("reserved2", ctypes.c_void_p),
        ("reserved3", ctypes.c_void_p),
        ("reserved4", ctypes.c_void_p),
        ("OpenPage", ctypes.CFUNCTYPE(IGR_RETURN_CODE, ctypes.c_void_p, ctypes.POINTER(IGR_Compare_Documents_Callback_Context), ctypes.c_uint32, ctypes.POINTER(IGR_HANDLE))),
        ("ClosePage", ctypes.CFUNCTYPE(IGR_RETURN_CODE, ctypes.c_void_p, ctypes.POINTER(IGR_Compare_Documents_Callback_Context), IGR_HANDLE)),
        ("GetPageMargins", ctypes.CFUNCTYPE(IGR_RETURN_CODE, ctypes.c_void_p, ctypes.POINTER(IGR_Compare_Documents_Callback_Context), ctypes.POINTER(IGR_FRect))),
        ("GetPageArea", ctypes.CFUNCTYPE(IGR_RETURN_CODE, ctypes.c_void_p, ctypes.POINTER(IGR_Compare_Documents_Callback_Context), ctypes.POINTER(IGR_FRect))),
        ("GetNextPageIndex", ctypes.CFUNCTYPE(IGR_RETURN_CODE, ctypes.c_void_p, ctypes.POINTER(IGR_Compare_Documents_Callback_Context), ctypes.POINTER(ctypes.c_uint32))),
        ("HandleError", ctypes.CFUNCTYPE(IGR_RETURN_CODE, ctypes.c_void_p, ctypes.POINTER(IGR_Compare_Documents_Callback_Context), ctypes.c_void_p)),
    ]

class IGR_Text_Compare_Document_Source(ctypes.Structure):
    _fields_ = [
        ("struct_size", IGR_ULONG),
        ("doc_handle", IGR_LONG),
        ("doc_first_page", IGR_ULONG),
        ("doc_page_count", IGR_ULONG),
        ("doc_margins", IGR_FRect),
    ]

class IGR_Page_Element(ctypes.Structure):
    _fields_ = [
        ("struct_size", IGR_ULONG),
        ("reserved", ctypes.POINTER(ctypes.c_void_p)),
        ("type", IGR_PAGE_ELEMENT_TYPE),
        ("depth", IGR_ULONG),
        ("flags", IGR_PAGE_ELEMENT_FLAG_TYPE),
        ("pos", IGR_FRect),
        ("rotation", IGR_ULONG),
    ]

class IGR_Subfile_Info(ctypes.Structure):
    _fields_ = [
        ("struct_size", IGR_ULONG),
        ("flags", IGR_ULONG),
        ("id", ctypes.POINTER(None)),
        ("id_size", IGR_ULONG),
        ("name", ctypes.POINTER(None)),
        ("name_size", IGR_ULONG),
        ("comment", ctypes.POINTER(None)),
        ("comment_size", IGR_ULONG),
        ("size", IGR_ULONGLONG),
        ("date", IGR_ULONGLONG),
    ]

IGR_PAGE_ELEMENT_STYLES_CALLBACK = ctypes.CFUNCTYPE(
    IGR_LONG,
    ctypes.POINTER(IGR_UCS2),
    ctypes.POINTER(IGR_UCS2),
    ctypes.c_void_p
)

IGR_PAGE_ELEMENT_CALLBACK = ctypes.CFUNCTYPE(
    IGR_LONG,
    IGR_HPAGE,
    ctypes.POINTER(IGR_Page_Element),
    ctypes.c_void_p
)

class ISYS11dfAPI:
    @staticmethod
    def windll_name(name, dll_path = None):
        if dll_path == None:
            return name
        else:
            return os.path.join(dll_path, name + ".dll")

    @staticmethod
    def windll_load(name, dll_path = None, cygwin = False):

        if not isinstance(dll_path, list) or dll_path == None:
            dll_path = [dll_path]

        LOAD_LIBRARY_SEARCH_APPLICATION_DIR = 0x00000200
        LOAD_LIBRARY_SEARCH_DEFAULT_DIRS = 0x00001000
        LOAD_LIBRARY_SEARCH_DLL_LOAD_DIR = 0x00000100
        LOAD_WITH_ALTERED_SEARCH_PATH = 0x00000008

        for path in dll_path:
            try:
                if cygwin:
                    return ctypes.CDLL(ISYS11dfAPI.windll_name(name, path))
                else:
                    if path is not None:
                        try:
                            os.add_dll_directory(path)
                        except AttributeError:
                            # Python 3.7 does not support add_dll_directory. We side
                            # load the DLLs so the load library below can succeed.
                            ctypes.windll.kernel32.SetDllDirectoryW(path)
                            ctypes.windll.kernel32.LoadLibraryExW(ISYS11dfAPI.windll_name(name, path),
                                0,
                                LOAD_LIBRARY_SEARCH_DEFAULT_DIRS or LOAD_LIBRARY_SEARCH_DLL_LOAD_DIR)

                    return ctypes.windll.LoadLibrary(ISYS11dfAPI.windll_name(name, path))
            except FileNotFoundError:
                pass
            except ImportError:
                pass
        raise ImportError("%s not found." % name)

    @staticmethod
    def unixdll_name(name, dll_path = None):
        res = "lib" + name + ".so"
        if sys.platform == 'darwin':
            res = "lib" + name + ".dylib"
        if dll_path is not None:
            res = os.path.join(dll_path, res)
        return res

    @staticmethod
    def unixdll_load(name, dll_path = None):
        try:
            return ctypes.cdll.LoadLibrary(ISYS11dfAPI.unixdll_name("ISYS11df", dll_path))
        except OSError:
            return ctypes.cdll.LoadLibrary(ISYS11dfAPI.unixdll_name("ISYS11df"))

    def __init__(self, dll_path = None):
        if os.name == 'nt':
            self._libISYS11df = ISYS11dfAPI.windll_load("ISYS11df", dll_path)
        elif platform.system().lower().startswith("cygwin_nt"):
            self._libISYS11df = ISYS11dfAPI.windll_load("ISYS11df", dll_path, cygwin = True)
        else:
            self._libISYS11df = ISYS11dfAPI.unixdll_load("ISYS11df", dll_path)

        self.Init_Instance = self._libISYS11df.Init_Instance
        self.Init_Instance.argtypes = [IGR_LONG, ctypes.c_char_p, ctypes.POINTER(Instance_Status_Block), ctypes.POINTER(IGR_SHORT), ctypes.POINTER(Error_Control_Block)]
        self.Init_Instance.restype = None

        self.Close_Instance = self._libISYS11df.Close_Instance
        self.Close_Instance.argtypes = [ctypes.POINTER(Error_Control_Block)]
        self.Close_Instance.restype = None

        self.Switch_Instance = self._libISYS11df.Switch_Instance
        self.Switch_Instance.argtypes = [IGR_SHORT, ctypes.POINTER(Error_Control_Block)]
        self.Switch_Instance.restype = None

        self.Widechar_to_UTF8 = self._libISYS11df.Widechar_to_UTF8
        self.Widechar_to_UTF8.argtypes = [ctypes.POINTER(IGR_UCS2), ctypes.c_char_p, IGR_LONG]
        self.Widechar_to_UTF8.restype = None

        self.Widechar_to_UTF8_Ex = self._libISYS11df.Widechar_to_UTF8_Ex
        self.Widechar_to_UTF8_Ex.argtypes = [ctypes.POINTER(IGR_UCS2), IGR_LONG, ctypes.c_char_p, IGR_LONG]
        self.Widechar_to_UTF8_Ex.restype = None

        self.UTF8_to_Widechar = self._libISYS11df.UTF8_to_Widechar
        self.UTF8_to_Widechar.argtypes = [ctypes.c_char_p, ctypes.POINTER(IGR_UCS2), IGR_LONG]
        self.UTF8_to_Widechar.restype = None

        self.UTF8_to_Widechar_Ex = self._libISYS11df.UTF8_to_Widechar_Ex
        self.UTF8_to_Widechar_Ex.argtypes = [ctypes.c_char_p, IGR_LONG, ctypes.POINTER(IGR_UCS2), IGR_LONG]
        self.UTF8_to_Widechar_Ex.restype = None

        self.IGR_Get_File_Type = self._libISYS11df.IGR_Get_File_Type
        self.IGR_Get_File_Type.argtypes = [ctypes.POINTER(IGR_UCS2), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_File_Type.restype = IGR_RETURN_CODE

        self.IGR_Get_Stream_Type = self._libISYS11df.IGR_Get_Stream_Type
        self.IGR_Get_Stream_Type.argtypes = [ctypes.POINTER(IGR_Stream), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Get_Stream_Type.restype = IGR_RETURN_CODE

        self.IGR_Open_File = self._libISYS11df.IGR_Open_File
        self.IGR_Open_File.argtypes = [ctypes.POINTER(IGR_UCS2), IGR_LONG, ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Open_File.restype = IGR_RETURN_CODE

        self.IGR_Open_Stream = self._libISYS11df.IGR_Open_Stream
        self.IGR_Open_Stream.argtypes = [ctypes.POINTER(IGR_Stream), IGR_LONG, ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(IGR_LONG), ctypes.POINTER(Error_Control_Block)]
        self.IGR_Open_Stream.restype = IGR_RETURN_CODE
